package org.texttechnologylab.ppr.blatt3.data.interfaces;


/**
 * Interface für Fraktion in Redeportal
 */


public interface FraktionIn {

    /**
     * Gibt den Namen der Fraktion zurück
     * @return name
     */
    String getName();


}
